--- a/style.css
+++ b/style.css
@@ -4,17 +4,25 @@ body{
 
 .container{
     border: 1px solid #000;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    background-color: #4d4d4d;
+    width: 400px;
+    margin: 0 auto;
+    border-radius: 40px;
+}
+
+.container2{
+    padding: 42px;
 }
 
 .visor-calc{
-    width: 432px;
-    height: 30px;
+    width: 310px;
+    height: 50px;
     margin: 20px 0;
+    background-color: #d0e6a8;
+    border: none;
+    text-align: right;
+    font-size: 30px;
+
 }
 .numbers{
     display: grid;
@@ -34,22 +42,41 @@ body{
 }
 
 .btn{
+    display: bl;
+    width: 70px;
+    height: 85px;
     border: 1px solid lightgrey;
     padding: 20px;
     color: #fff;
-    background-color: gray;
-    font-size: 30px;
+    background-color: #808080;
+    font-size: 40px;
+    margin: 5px;
+    font-weight: bold;
 }
 
 .btn-result{
-    background-color: #f30;
+    width: 310px;
+    height: 60px;
+    font-size: 30px;
+    padding: 0;
+    background-color: #ea5e61;
 }
 
 .btn-ope{
-    background-color: #0af;
+    background-color: #65c7d0;
 }
 
 .btn:hover{
     cursor: pointer;
     background-color: #000;
 }
+
+.btn-delete{
+    font-size: 25px;
+}
+
+.btn-delete-all{
+    background-color: #f00;
+    font-size: 20px;
+}
+
